--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rajatsehgal/gears",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A module that provides a couple of react components that can be used as a busy/progress indicator",
   "scripts": {
     "start": "http-server . -s",
@@ -19,7 +19,7 @@
   "author": "rajatsehgal <rajatsehgal1988@gmail.com> (rajatsehgal.github.io)",
   "license": "ISC",
   "homepage": "https://github.com/rajatsehgal/gears",
-  "dependencies": {
+  "peerDependencies": {
     "radium": "^0.16.6",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
