--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rajatsehgal/gears",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A module that provides a couple of react components that can be used as a busy/progress indicator",
   "scripts": {
     "start": "http-server . -s",
@@ -19,17 +19,17 @@
   "author": "rajatsehgal <rajatsehgal1988@gmail.com> (rajatsehgal.github.io)",
   "license": "ISC",
   "homepage": "https://github.com/rajatsehgal/gears",
-  "peerDependencies": {
-    "radium": "^0.16.6",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+  "dependencies": {
+    "radium": "^0.18.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.6.5",
+    "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "http-server": "^0.9.0",
-    "webpack": "^1.12.14"
+    "webpack": "^1.13.1"
   }
 }
