--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rajatsehgal/gears",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A module that provides a couple of react components that can be used as a busy/progress indicator",
   "scripts": {
     "start": "http-server . -s",
@@ -20,16 +20,16 @@
   "license": "ISC",
   "homepage": "https://github.com/rajatsehgal/gears",
   "dependencies": {
-    "radium": "^0.18.1",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "radium": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "http-server": "^0.9.0",
-    "webpack": "^1.13.1"
+    "babel-core": "latest",
+    "babel-loader": "latest",
+    "babel-preset-es2015": "latest",
+    "babel-preset-react": "latest",
+    "http-server": "latest",
+    "webpack": "latest"
   }
 }
